Bug 316426 - Does not display account name correctly
Summary: Does not display account name correctly
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-09 18:55 UTC by David Edmundson
Modified: 2013-03-11 11:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-03-09 18:55:33 UTC
Open system settings

Change an account display name
Contact list does not update
Comment 1 David Edmundson 2013-03-11 11:50:38 UTC
Git commit 70025cbda1958cb2b133274376435cd3c9aefa4f by David Edmundson.
Committed on 11/03/2013 at 12:49.
Pushed by davidedmundson into branch 'master'.

Use account displayName for displaying

For UI purposes displayName should be used over normalisedName
REVIEW: 109376

M  +1    -1    KTp/Models/accounts-tree-proxy-model.cpp

http://commits.kde.org/telepathy-common-internals/70025cbda1958cb2b133274376435cd3c9aefa4f