Use account displayName for displaying

For UI purposes displayName should be used over normalisedName

BUG: 316426
REVIEW: 109376